--- a/express-back-end/package.json
+++ b/express-back-end/package.json
@@ -6,12 +6,14 @@
   "author": "garrettgsb",
   "license": "MIT",
   "scripts": {
-    "go": "nodemon server.js"
+    "go": "nodemon server.js",
+    "reset": "node reset.js"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
     "dotenv": "^8.1.0",
     "express": "^4.16.4",
+    "morgan": "^1.9.1",
     "nodemon": "^1.18.7",
     "pg": "^7.12.1"
   }
