--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -6,11 +6,13 @@
     "@material-ui/core": "^4.4.2",
     "@material-ui/icons": "^4.4.1",
     "axios": "^0.18.1",
+    "global": "^4.4.0",
     "lodash": "^4.17.15",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "yarn": "^1.19.1"
   },
   "scripts": {
     "start": "react-scripts start",
