--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -10,6 +10,7 @@
     "lodash": "^4.17.15",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-google-login": "^5.0.5",
     "react-router-dom": "^5.0.1",
     "react-scripts": "2.1.8",
     "yarn": "^1.19.1"
