--- a/express-back-end/package.json
+++ b/express-back-end/package.json
@@ -10,6 +10,7 @@
     "reset": "node reset.js"
   },
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "body-parser": "^1.18.3",
     "dotenv": "^8.1.0",
     "express": "^4.16.4",
