--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -7,6 +7,7 @@
     "@material-ui/icons": "^4.4.1",
     "axios": "^0.18.1",
     "global": "^4.4.0",
+    "js-cookie": "^2.2.1",
     "lodash": "^4.17.15",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
