--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -5,15 +5,15 @@
   "dependencies": {
     "@material-ui/core": "^4.4.2",
     "@material-ui/icons": "^4.4.1",
-    "axios": "^0.18.1",
+    "axios": "0.19.0",
     "global": "^4.4.0",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.15",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-google-login": "^5.0.5",
-    "react-router-dom": "^5.0.1",
-    "react-scripts": "2.1.8",
+    "react": "16.11.0",
+    "react-dom": "16.11.0",
+    "react-google-login": "^5.0.7",
+    "react-router-dom": "5.1.2",
+    "react-scripts": "3.2.0",
     "yarn": "^1.19.1"
   },
   "scripts": {
