--- a/package.json
+++ b/package.json
@@ -31,5 +31,5 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "proxy": "https://bookkeeping-in-web.herokuapp.com/"
+  "proxy": "http://localhost:8080"
 }
