--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react-dom": "16.11.0",
     "react-google-login": "^5.0.7",
     "react-router-dom": "5.1.2",
-    "react-scripts": "3.2.0",
+    "react-scripts": "^3.3.0",
     "yarn": "^1.19.1"
   },
   "scripts": {
