--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "global": "^4.4.0",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.15",
+    "moment": "^2.24.0",
     "react": "16.11.0",
     "react-dom": "16.11.0",
     "react-google-login": "^5.0.7",
