--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react-dom": "16.11.0",
     "react-google-login": "^5.0.7",
     "react-router-dom": "5.1.2",
-    "react-scripts": "^3.3.0",
+    "react-scripts": "3.2.0",
     "yarn": "^1.19.1"
   },
   "scripts": {
@@ -26,11 +26,6 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ],
+  "browserslist": [">0.2%", "not dead", "not ie <= 11", "not op_mini all"],
   "proxy": "http://localhost:8080"
 }
